# cmakewtest1

./: CMakeLists.txt  Jenkinsfile
test/: CMakeLists.txt  day1-gtests.cpp  day1.cpp
