include_directories(${gtest_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/test)
add_executable(mytest day1-gtests.cpp)
target_link_libraries(mytest gtest_main)
target_include_directories(mytest PUBLIC CMAKE_SOURCE_DIR test ${PROJECT_SOURCE_DIR}/test)
